--- a/customizable-layout/customizable-layout.component.scss
+++ b/customizable-layout/customizable-layout.component.scss
@@ -6,7 +6,7 @@
     flex: auto;
     display: flex;
     flex-direction: column;
-    > div.reordering {
+    > div.editing {
       padding: 4px;
       border-radius: 3px;
       outline: 3px dashed lightgray;
