--- a/customizable-layout/customizable-layout.component.html
+++ b/customizable-layout/customizable-layout.component.html
@@ -9,15 +9,15 @@
     [id]="list.containerName"
     [ngClass]="list.containerName"
     [cdkDropListData]="list.items"
-    [cdkDropListDisabled]="!reordering"
+    [cdkDropListDisabled]="!editing"
     (cdkDropListDropped)="drop($event)"
     [cdkDropListConnectedTo]="list.connectedTo ? list.connectedTo : null"
-    [cdkDropListDisabled]="!reordering">
+    [cdkDropListDisabled]="!editing">
     <div *ngFor="let e of list.items; trackBy: cardTrackBy" cdkDrag
-      [ngClass]="{ 'reordering': reordering }"
+      [ngClass]="{ 'editing': editing }"
       [ngStyle]="{
         'margin-bottom': layout.cardMargin,
-        'cursor': reordering ? 'grab' : 'default'
+        'cursor': editing ? 'grab' : 'default'
       }">
       <ng-template *ngComponentOutlet="componentMap[e.componentName]; injector: componentInjector"></ng-template>
     </div>
