--- a/customizable-layout/customizable-layout.component.html
+++ b/customizable-layout/customizable-layout.component.html
@@ -14,6 +14,7 @@
     [cdkDropListConnectedTo]="list.connectedTo ? list.connectedTo : null"
     [cdkDropListDisabled]="!editing">
     <div *ngFor="let e of list.items; trackBy: cardTrackBy" cdkDrag
+      [cdkDragStartDelay]="dragDelay$ | async"
       [ngClass]="{ 'editing': editing }"
       [ngStyle]="{
         'display': componentMap[e.componentName].hidden ? 'none' : 'block',
