Created without-hidden pipe instead of filter

--- a/customizable-layout/customizable-layout.component.html
+++ b/customizable-layout/customizable-layout.component.html
@@ -13,7 +13,7 @@
     (cdkDropListDropped)="drop($event)"
     [cdkDropListConnectedTo]="list.connectedTo ? list.connectedTo : null"
     [cdkDropListDisabled]="!editing">
-    <div *ngFor="let e of list.items | filter:withoutHiddenElements; trackBy: cardTrackBy" cdkDrag
+    <div *ngFor="let e of list.items | withoutHidden:componentMap; trackBy: cardTrackBy" cdkDrag
       [cdkDragStartDelay]="dragDelay$ | async"
       [ngClass]="{ 'editing': editing }"
       [ngStyle]="{
