--- a/projects/demo-app/src/app/app.component.html
+++ b/projects/demo-app/src/app/app.component.html
@@ -1,4 +1,5 @@
-<ng-customizable-layout #layout [defaultLayout]="layoutConfig" [editing]="editing()"></ng-customizable-layout>
+<ng-customizable-layout #layout [defaultLayout]="layoutConfig" [componentMap]="componentMap" [editing]="editing()">
+</ng-customizable-layout>
 <ng-customizable-layout-menu
   [editingLayout]="editing()"
   (editPressed)="editPressed()"
