--- a/projects/demo-app/src/app/app.component.html
+++ b/projects/demo-app/src/app/app.component.html
@@ -1,4 +1,9 @@
-<ng-customizable-layout #layout [defaultLayout]="layoutConfig" [componentMap]="componentMap" [editing]="editing()">
+<ng-customizable-layout
+  #layout
+  [layoutConfig]="layoutConfig"
+  [templateMap]="{ cardTemplate: cardTemplate, otherCardTemplate: otherCardTemplate }"
+  [editing]="editing()"
+>
 </ng-customizable-layout>
 <ng-customizable-layout-menu
   [editingLayout]="editing()"
@@ -10,3 +15,26 @@
   (removeColLeftPressed)="layout.removeColumnLeftPressed()"
 >
 </ng-customizable-layout-menu>
+
+<ng-template #cardTemplate>
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>Some title</mat-card-title>
+      <mat-card-subtitle>Some subtitle</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <p>Some interesting content</p>
+    </mat-card-content>
+  </mat-card>
+</ng-template>
+<ng-template #otherCardTemplate>
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>Some other title</mat-card-title>
+      <mat-card-subtitle>Some other subtitle</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <p>Some other interesting content</p>
+    </mat-card-content>
+  </mat-card>
+</ng-template>
