--- a/projects/ng-customizable-layout/src/lib/customizable-layout-menu/customizable-layout-menu.component.html
+++ b/projects/ng-customizable-layout/src/lib/customizable-layout-menu/customizable-layout-menu.component.html
@@ -1,14 +1,9 @@
-
 <div class="actions">
-  <button mat-icon-button
-    id="drag-btn"
-    (click)="editPressed.emit()"
-    [ngClass]="{'editing': editingLayout}">
+  <button mat-icon-button id="drag-btn" (click)="editPressed.emit()" [ngClass]="{ editing: editingLayout }">
     <mat-icon>drag_indicator</mat-icon>
   </button>
-  
-  <button mat-icon-button #cardLayoutSettingsBtn="matMenuTrigger"
-    [matMenuTriggerFor]="cardLayoutMenu">
+
+  <button mat-icon-button #cardLayoutSettingsBtn="matMenuTrigger" [matMenuTriggerFor]="cardLayoutMenu">
     <mat-icon>menu</mat-icon>
   </button>
 </div>
@@ -28,21 +23,22 @@
 
 <mat-menu #addCols="matMenu">
   <button mat-menu-item (click)="addColRightPressed.emit()">
-    <mat-icon>first_page</mat-icon>
     <p translate>Add column right</p>
+    <mat-icon>first_page</mat-icon>
   </button>
   <button mat-menu-item (click)="addColLeftPressed.emit()">
-    <mat-icon>last_page</mat-icon>
     <p translate>Add column left</p>
+    <mat-icon>last_page</mat-icon>
   </button>
 </mat-menu>
-<mat-menu #removeCols="matMenu">
+<mat-menu #removeCols="matMenu"
+  >ks
   <button mat-menu-item (click)="removeColRightPressed.emit()">
-    <mat-icon>first_page</mat-icon>
     <p translate>Remove column right</p>
+    <mat-icon>first_page</mat-icon>
   </button>
   <button mat-menu-item (click)="removeColLeftPressed.emit()">
-    <mat-icon>last_page</mat-icon>
     <p translate>Remove column left</p>
+    <mat-icon>last_page</mat-icon>
   </button>
 </mat-menu>
