--- a/projects/ng-customizable-layout/src/lib/customizable-layout/customizable-layout.component.scss
+++ b/projects/ng-customizable-layout/src/lib/customizable-layout/customizable-layout.component.scss
@@ -6,11 +6,29 @@
       transition: padding 0.3s ease-in-out;
       user-select: none;
       &.editing {
-        padding: 4px;
+        padding: 3px;
         outline: 3px dashed lightgray;
       }
     }
   }
+}
+
+.cdk-drag-preview {
+  transform: rotate(5deg);
+  box-sizing: border-box;
+  border-radius: 4px;
+}
+
+.cdk-drag-placeholder {
+  opacity: 0.3;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.drag-list.cdk-drop-list-dragging div:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
 /* Animate items as they're being sorted. */
