--- a/projects/demo-app/src/app/app.component.html
+++ b/projects/demo-app/src/app/app.component.html
@@ -1,7 +1,7 @@
 <ng-customizable-layout
   #layout
   [layoutConfig]="layoutConfig"
-  [templateMap]="{ cardTemplate: cardTemplate, otherCardTemplate: otherCardTemplate }"
+  [templateMap]="{ cardTemplate, otherCardTemplate }"
   [editing]="editing()"
 >
 </ng-customizable-layout>
