--- a/projects/demo-app/src/app/app.component.scss
+++ b/projects/demo-app/src/app/app.component.scss
@@ -1,8 +1,24 @@
 :host {
   display: block;
   padding: 20px;
+  padding-block-start: 3rem;
   background-color: #f5f5f5;
   border: 1px solid #e0e0e0;
   border-radius: 4px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+ng-customizable-layout-menu {
+  position: fixed;
+  right: 1.5rem;
+  top: 0;
+}
+
+mat-card-content {
+  padding: 1em;
+  img {
+    height: 150px;
+    object-fit: contain;
+    border-radius: 5px;
+  }
 }
