Remove the need for ids

--- a/projects/ng-customizable-layout/src/lib/customizable-layout/customizable-layout.component.html
+++ b/projects/ng-customizable-layout/src/lib/customizable-layout/customizable-layout.component.html
@@ -18,7 +18,7 @@
     [cdkDropListDisabled]="!editing()"
     (cdkDropListDropped)="drop($event)"
   >
-    @for (item of list.items | withoutHidden; track item.id) {
+    @for (item of list.items | withoutHidden; track cardTrackBy($index, item)) {
     <div
       cdkDrag
       class="drag-item"
