--- a/projects/ng-customizable-layout/src/lib/customizable-layout-menu/customizable-layout-menu.component.html
+++ b/projects/ng-customizable-layout/src/lib/customizable-layout-menu/customizable-layout-menu.component.html
@@ -31,8 +31,7 @@
     <mat-icon>last_page</mat-icon>
   </button>
 </mat-menu>
-<mat-menu #removeCols="matMenu"
-  >ks
+<mat-menu #removeCols="matMenu">
   <button mat-menu-item (click)="removeColRightPressed.emit()">
     <p translate>Remove column right</p>
     <mat-icon>first_page</mat-icon>
