--- a/projects/demo-app/src/app/app.component.scss
+++ b/projects/demo-app/src/app/app.component.scss
@@ -1,17 +1,21 @@
 :host {
   display: block;
-  padding: 20px;
-  padding-block-start: 3rem;
+  padding: 1rem;
   background-color: #f5f5f5;
   border: 1px solid #e0e0e0;
   border-radius: 4px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin: 1rem;
 }
 
-ng-customizable-layout-menu {
-  position: fixed;
-  right: 1.5rem;
-  top: 0;
+div.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+  h1 {
+    margin: 0;
+  }
 }
 
 mat-card-content {
